--- a/shop.html
+++ b/shop.html
@@ -33,41 +33,74 @@
   <a href="gents.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
     <img src="assets\pexels-akingbola-opeyemi-505464242-28520990.jpg" alt="Gents" class="w-full h-64 object-cover" />
     <h3 class="mt-4 text-xl font-semibold">GENTS</h3>
-    <p class="text-gray-600">165 PRODUCTS</p>
+    <p class="text-gray-600"> PRODUCTS</p>
   </a>
 
   <a href="ladies.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
     <img src="assets\pexels-reyna-3075967.jpg" alt="Ladies" class="w-full h-64 object-cover" />
     <h3 class="mt-4 text-xl font-semibold">LADIES</h3>
-    <p class="text-gray-600">44 PRODUCTS</p>
+    <p class="text-gray-600"> PRODUCTS</p>
   </a>
 
   <a href="kids.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
     <img src="assets\pexels-vika-glitter-392079-1651483.jpg" alt="Kidswear" class="w-full h-64 object-cover" />
     <h3 class="mt-4 text-xl font-semibold">KIDS & INFANTS</h3>
-    <p class="text-gray-600">43 PRODUCTS</p>
+    <p class="text-gray-600"> PRODUCTS</p>
   </a>
 
   <a href="bags.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
     <img src="assets\pexels-anastasia-shuraeva-5705478.jpg" alt="Bags" class="w-full h-64 object-cover" />
     <h3 class="mt-4 text-xl font-semibold">BAGS</h3>
-    <p class="text-gray-600">130 PRODUCTS</p>
+    <p class="text-gray-600">PRODUCTS</p>
   </a>
 
   <a href="perfumes.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
     <img src="assets\pexels-valeriya-965989.jpg" alt="Perfumes" class="w-full h-64 object-cover" />
     <h3 class="mt-4 text-xl font-semibold">PERFUMES</h3>
-    <p class="text-gray-600">88 PRODUCTS</p>
+    <p class="text-gray-600"> PRODUCTS</p>
   </a>
 
   <a href="shoes.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
     <img src="assets\pexels-ingo-609771.jpg" alt="Ladies" class="w-full h-64 object-cover" />
     <h3 class="mt-4 text-xl font-semibold">SHOES</h3>
-    <p class="text-gray-600">114 PRODUCTS</p>
+    <p class="text-gray-600"> PRODUCTS</p>
   </a>
 </div>
 
 
 
 </body>
+<!---Footer Section-->
+    <footer class="bg-gray-900 text-white py-8">
+        <div class="max-w-6xl mx-auto grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-8">
+          <!--About Section-->
+          <div>
+            <h3 class="text-lg font-semibold mb-2">About</h3>
+            <p class="text-gray-400">Our boutique is designed to provide a personalized and immersive shopping experience, combining sleek, contemporary interiors with advanced technology for your convenience.</p>
+         </div>  
+           <!--Quick Links-->
+           <div>
+            <h3 class="text-lg font-semibold mb-2">Quick Links</h3>
+            <ul class="space-y-2">
+                <li><a href="index.html" class="text-gray-400 hover:text-white transition">Home</a></li>
+                <li><a href="shop.html" class="text-gray-400 hover:text-white transition">Shop</a></li>
+                <li><a href="about.html" class="text-gray-400 hover:text-white transition">About</a></li>
+                <li><a href="contact.html" class="text-gray-400 hover:text-white transition">Contact Us</a></li>
+             </ul>
+           </div>
+           <!--Contact Section-->
+           <div>
+            <h3 class="text-lg font-semibold mb-2">Contact Us</h3>
+            <p class="text-gray-400">Email:jeremianarthrifts@gmail.com</p>
+            <p class="text-gray-400">Phone: +254793947439</p>
+        </div>
+        <div>
+            <h3 class="text-lg font-semibold mb-2">Follow Us</h3>
+            <div class="flex space-x-4">
+                <a href="index.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-facebook"></i></a>
+                <a href="contact.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href="about.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-github"></i></a>
+                <a href="contact.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-square-instagram"></i></a>
+
+            </div>
 </html>
