--- a/shop.html
+++ b/shop.html
@@ -11,21 +11,45 @@
 
 <body class="bg-gray-100 text-gray-900">
 
+   
     <!-- Header -->
-    <header class="fixed top-0 w-full bg-gray-900 text-white flex justify-between items-center px-8 py-4 z-50">
-        <div class="container mx-auto flex text-center justify-between">
-            <h1 class="text-3xl font-bold flex items-center">JEREMIANA'S THRIFT STORE</h1>
-            <nav>
-       
-                <ul class="flex justify-center space-x-6 ">
-                    <li><a href="index.html" class="hover:text-red-500">Home</a></li>
-                    <li><a href="shop.html" class="hover:text-red-500">Shop</a></li>
-                    <li><a href="about.html" class="hover:text-red-500">About</a></li>
-                    <li><a href="contact.html" class="hover:text-red-500">Contact Us</a></li>
-                </ul>   
-            </nav>
-        </div>
-    </header>
+    <header class="fixed top-0 w-full bg-gray-900 text-white px-8 py-4 z-50">
+      <div class="container mx-auto flex justify-between items-center">
+
+          <!-- Logo -->
+          <h1 class="text-3xl font-bold mt-2 mb-2">JEREMIANA'S THRIFT STORE</h1>
+
+          <!-- Desktop Navigation -->
+          <nav class="hidden md:flex space-x-6">
+              <a href="index.html" class="hover:text-red-500">Home</a>
+              <a href="shop.html" class="hover:text-red-500">Shop</a>
+              <a href="about.html" class="hover:text-red-500">About</a>
+              <a href="contact.html" class="hover:text-red-500">Contact Us</a>
+          </nav>
+
+          <!-- Mobile Menu Button -->
+          <button id="menu-btn" class="md:hidden focus:outline-none">
+              <i class="fas fa-bars text-2xl"></i>
+          </button>
+      </div>
+
+      <!-- Mobile Navigation -->
+      <nav id="mobile-menu" class="hidden flex-col space-y-4 mt-4 md:hidden">
+          <a href="index.html" class="block hover:text-red-500">Home</a>
+          <a href="shop.html" class="block hover:text-red-500">Shop</a>
+          <a href="about.html" class="block hover:text-red-500">About</a>
+          <a href="contact.html" class="block hover:text-red-500">Contact Us</a>
+      </nav>
+  </header>
+  <script>
+    const menuBtn = document.getElementById('menu-btn');
+    const mobileMenu = document.getElementById('mobile-menu');
+
+    menuBtn.addEventListener('click', () => {
+        mobileMenu.classList.toggle('hidden');
+    });
+</script>
+  
 
     <!-- Product Grid Section-->
   <div class="grid sm:grid-cols-1 md:grid-cols-3 lg:grid-cols-3 gap-8 p-8 mt-12">
@@ -60,14 +84,8 @@
     <p class="text-gray-600"> PRODUCTS</p>
   </a>
 
-  <a href="shoes.html" class="block bg-gray-100 p-4 rounded-lg shadow-lg hover:shadow-xl transition hover:scale-105">
-    <img src="assets\pexels-ingo-609771.jpg" alt="Ladies" class="w-full h-64 object-cover" />
-    <h3 class="mt-4 text-xl font-semibold">SHOES</h3>
-    <p class="text-gray-600"> PRODUCTS</p>
-  </a>
+  
 </div>
-
-
 
 </body>
 <!---Footer Section-->
@@ -103,4 +121,5 @@
                 <a href="contact.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-square-instagram"></i></a>
 
             </div>
+            </body>
 </html>
