--- a/bags.html
+++ b/bags.html
@@ -24,6 +24,12 @@
               <a href="shop.html" class="hover:text-red-500">Shop</a>
               <a href="about.html" class="hover:text-red-500">About</a>
               <a href="contact.html" class="hover:text-red-500">Contact Us</a>
+              <a href="#" class="text-white hover:text-gray-500 transition">
+                <i class="fa-solid fa-cart-shopping"></i>
+              </a>
+              <a href="signup.html" class="text-white hover:text-gray-500 transition">
+              <i class="fa-solid fa-user"></i>
+                 </a>
           </nav>
 
           <!-- Mobile Menu Button -->
@@ -248,11 +254,11 @@
       <div>
           <h3 class="text-lg font-semibold mb-2">Follow Us</h3>
           <div class="flex space-x-4">
-              <a href="index.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-facebook"></i></a>
-              <a href="contact.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-square-x-twitter"></i></a>
-              <a href="about.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-github"></i></a>
-              <a href="contact.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-square-instagram"></i></a>
-
+            <a href="https://github.com/Jeremy-waweru10/CAPSTONE-1.git" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/_.j.eremiana?igsh=Mm95b3NxaXRiNXQ1&utm_source=qr" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.tiktok.com/@.j.eremiana?_t=ZM-8v2EOV2bu9H&_r=1" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-tiktok"></i></i></a>
+            <a href="index.html" class="text-gray-400 hover:text-white transition"><i class="fa-brands fa-facebook"></i></a>
+            
           </div>
       </body>
 </html>
