--- a/signup.html
+++ b/signup.html
@@ -89,7 +89,7 @@
                 </button>
             </form>
             <!-- Already have an account -->
-            <p class="text-center text-black mt-6">Already have an account? <a href="#"
+            <p class="text-center text-black mt-6">Already have an account? <a href="login.html"
                     class="text-blue-500 hover:underline">Log In</a></p>
         </div>
     </div>
